Ensureed payment logos fit without stretching by giving it a height and object fit: contain

--- a/style.css
+++ b/style.css
@@ -198,5 +198,11 @@ body {
     width:100%;
 }
 
+.payment-strip {
+    height:38px;
+    object-fit: contain;
+}
+
+
 
 
